Fixed subsites images growing too big

--- a/src/styles.css
+++ b/src/styles.css
@@ -824,7 +824,7 @@ a.topstory {
     font-size: 0.8rem;
   }
   .subsites__article__image {
-    width: 25vw;
+    width: 100%;
     margin: 0 1rem 0 0;
   }
   #footer {
